--- a/public/scss/_root.scss
+++ b/public/scss/_root.scss
@@ -11,8 +11,10 @@
   --clr-primary: hsl(357, 92%, 47%);
   --clr-primary-alt: hsl(357, 84%, 41%);
 
-  --clr-neutral: #2d2d2d;
-  --clr-neutral-alt: #2e2e2e;
+  --clr-neutral: hsl(0, 0%, 18%);
+  --clr-neutral-alt: hsl(0, 0%, 30%);
+
+  --clr-blue: #0071eb;
 
   --stn-padding: 4.5rem;
   --divider-height: 0.5rem;
