--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,8 +7,9 @@
   --fs-small: 1.25rem;
   --clr-primary: hsl(357, 92%, 47%);
   --clr-primary-alt: hsl(357, 84%, 41%);
-  --clr-neutral: #2d2d2d;
-  --clr-neutral-alt: #2e2e2e;
+  --clr-neutral: hsl(0, 0%, 18%);
+  --clr-neutral-alt: hsl(0, 0%, 30%);
+  --clr-blue: #0071eb;
   --stn-padding: 4.5rem;
   --divider-height: 0.5rem;
 }
@@ -83,6 +84,10 @@ label, select {
     scroll-behavior: auto !important;
   }
 }
+.d-block {
+  display: block;
+}
+
 .d-flex {
   display: flex;
 }
@@ -125,6 +130,10 @@ label, select {
 
 .justify-center {
   justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .between-flex {
@@ -182,6 +191,10 @@ label, select {
 
 .clr-neutral-alt {
   background-color: var(--clr-neutral-alt);
+}
+
+.clr-blue {
+  color: var(--clr-blue);
 }
 
 .ff-roboto {
@@ -425,6 +438,406 @@ label, select {
   margin-right: 100px;
 }
 
+.m-1 {
+  margin: 1px;
+}
+
+.mt-1 {
+  margin-top: 1px;
+}
+
+.mb-1 {
+  margin-bottom: 1px;
+}
+
+.ml-1 {
+  margin-left: 1px;
+}
+
+.mr-1 {
+  margin-right: 1px;
+}
+
+.m-2 {
+  margin: 2px;
+}
+
+.mt-2 {
+  margin-top: 2px;
+}
+
+.mb-2 {
+  margin-bottom: 2px;
+}
+
+.ml-2 {
+  margin-left: 2px;
+}
+
+.mr-2 {
+  margin-right: 2px;
+}
+
+.m-3 {
+  margin: 3px;
+}
+
+.mt-3 {
+  margin-top: 3px;
+}
+
+.mb-3 {
+  margin-bottom: 3px;
+}
+
+.ml-3 {
+  margin-left: 3px;
+}
+
+.mr-3 {
+  margin-right: 3px;
+}
+
+.m-4 {
+  margin: 4px;
+}
+
+.mt-4 {
+  margin-top: 4px;
+}
+
+.mb-4 {
+  margin-bottom: 4px;
+}
+
+.ml-4 {
+  margin-left: 4px;
+}
+
+.mr-4 {
+  margin-right: 4px;
+}
+
+.m-5 {
+  margin: 5px;
+}
+
+.mt-5 {
+  margin-top: 5px;
+}
+
+.mb-5 {
+  margin-bottom: 5px;
+}
+
+.ml-5 {
+  margin-left: 5px;
+}
+
+.mr-5 {
+  margin-right: 5px;
+}
+
+.m-6 {
+  margin: 6px;
+}
+
+.mt-6 {
+  margin-top: 6px;
+}
+
+.mb-6 {
+  margin-bottom: 6px;
+}
+
+.ml-6 {
+  margin-left: 6px;
+}
+
+.mr-6 {
+  margin-right: 6px;
+}
+
+.m-7 {
+  margin: 7px;
+}
+
+.mt-7 {
+  margin-top: 7px;
+}
+
+.mb-7 {
+  margin-bottom: 7px;
+}
+
+.ml-7 {
+  margin-left: 7px;
+}
+
+.mr-7 {
+  margin-right: 7px;
+}
+
+.m-8 {
+  margin: 8px;
+}
+
+.mt-8 {
+  margin-top: 8px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
+}
+
+.ml-8 {
+  margin-left: 8px;
+}
+
+.mr-8 {
+  margin-right: 8px;
+}
+
+.m-9 {
+  margin: 9px;
+}
+
+.mt-9 {
+  margin-top: 9px;
+}
+
+.mb-9 {
+  margin-bottom: 9px;
+}
+
+.ml-9 {
+  margin-left: 9px;
+}
+
+.mr-9 {
+  margin-right: 9px;
+}
+
+.m-10 {
+  margin: 10px;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+
+.mr-10 {
+  margin-right: 10px;
+}
+
+.p-1 {
+  padding: 1px;
+}
+
+.pt-1 {
+  padding-top: 1px;
+}
+
+.pb-1 {
+  padding-bottom: 1px;
+}
+
+.pl-1 {
+  padding-left: 1px;
+}
+
+.pr-1 {
+  padding-right: 1px;
+}
+
+.p-2 {
+  padding: 2px;
+}
+
+.pt-2 {
+  padding-top: 2px;
+}
+
+.pb-2 {
+  padding-bottom: 2px;
+}
+
+.pl-2 {
+  padding-left: 2px;
+}
+
+.pr-2 {
+  padding-right: 2px;
+}
+
+.p-3 {
+  padding: 3px;
+}
+
+.pt-3 {
+  padding-top: 3px;
+}
+
+.pb-3 {
+  padding-bottom: 3px;
+}
+
+.pl-3 {
+  padding-left: 3px;
+}
+
+.pr-3 {
+  padding-right: 3px;
+}
+
+.p-4 {
+  padding: 4px;
+}
+
+.pt-4 {
+  padding-top: 4px;
+}
+
+.pb-4 {
+  padding-bottom: 4px;
+}
+
+.pl-4 {
+  padding-left: 4px;
+}
+
+.pr-4 {
+  padding-right: 4px;
+}
+
+.p-5 {
+  padding: 5px;
+}
+
+.pt-5 {
+  padding-top: 5px;
+}
+
+.pb-5 {
+  padding-bottom: 5px;
+}
+
+.pl-5 {
+  padding-left: 5px;
+}
+
+.pr-5 {
+  padding-right: 5px;
+}
+
+.p-6 {
+  padding: 6px;
+}
+
+.pt-6 {
+  padding-top: 6px;
+}
+
+.pb-6 {
+  padding-bottom: 6px;
+}
+
+.pl-6 {
+  padding-left: 6px;
+}
+
+.pr-6 {
+  padding-right: 6px;
+}
+
+.p-7 {
+  padding: 7px;
+}
+
+.pt-7 {
+  padding-top: 7px;
+}
+
+.pb-7 {
+  padding-bottom: 7px;
+}
+
+.pl-7 {
+  padding-left: 7px;
+}
+
+.pr-7 {
+  padding-right: 7px;
+}
+
+.p-8 {
+  padding: 8px;
+}
+
+.pt-8 {
+  padding-top: 8px;
+}
+
+.pb-8 {
+  padding-bottom: 8px;
+}
+
+.pl-8 {
+  padding-left: 8px;
+}
+
+.pr-8 {
+  padding-right: 8px;
+}
+
+.p-9 {
+  padding: 9px;
+}
+
+.pt-9 {
+  padding-top: 9px;
+}
+
+.pb-9 {
+  padding-bottom: 9px;
+}
+
+.pl-9 {
+  padding-left: 9px;
+}
+
+.pr-9 {
+  padding-right: 9px;
+}
+
+.p-10 {
+  padding: 10px;
+}
+
+.pt-10 {
+  padding-top: 10px;
+}
+
+.pb-10 {
+  padding-bottom: 10px;
+}
+
+.pl-10 {
+  padding-left: 10px;
+}
+
+.pr-10 {
+  padding-right: 10px;
+}
+
 .p-10 {
   padding: 10px;
 }
@@ -627,7 +1040,7 @@ label, select {
 
 .btn-shape {
   padding: 0.75rem 1.5rem;
-  font-size: var(--button);
+  font-size: 1.5rem;
   font-family: var(--ff-roboto);
   font-weight: 500;
   color: white;
@@ -666,9 +1079,7 @@ label, select {
   font-size: 1rem;
   line-height: 1.25rem;
   padding: 6px 36px;
-  border-width: 1px;
-  border-style: solid;
-  border-radius: 0.25rem;
+  border: 1px solid 0.25rem;
   background: rgba(22, 22, 22, 0.7);
   border-color: rgba(128, 128, 128, 0.7);
   color: white;
@@ -691,13 +1102,30 @@ label, select {
   border: 1px solid rgba(128, 128, 128, 0.7);
   border-radius: 0.25rem;
   background-color: rgba(22, 22, 22, 0.7);
-  width: 300px;
+  width: 400px;
   padding: 0.5rem 1rem;
   color: white;
 }
 .email-input::placeholder {
   color: #fff;
   opacity: 0.8;
+}
+
+.install-box {
+  border: 2px solid #232323;
+  background-color: #000;
+  border-radius: 0.75rem;
+  overflow: hidden;
+  top: 75%;
+  left: 21%;
+  min-width: 21.875rem;
+}
+.install-box img {
+  display: block;
+  height: 4.5rem;
+}
+.install-box .video img {
+  height: 3.5rem;
 }
 
 body {
@@ -722,8 +1150,10 @@ header .logo {
 .hero-section {
   min-height: 43.75rem;
   padding: 9.875rem 0 4rem;
-  background-image: url(/public/images/main_background.jpg);
-  background-position: 45% 70%;
+  background-image: url("../images/main_background.jpg");
+  background-position: right bottom;
+  background-size: 125%;
+  background-repeat: no-repeat;
   position: relative;
   width: 100%;
 }
@@ -742,6 +1172,31 @@ header .logo {
   top: 95px;
   left: 85px;
   z-index: -1;
+}
+
+.devices video {
+  top: 10%;
+  left: 18%;
+  z-index: -1;
+  width: 60%;
+}
+
+.question {
+  cursor: pointer;
+  transition: 0.3s;
+}
+.question::before {
+  content: "+";
+  font-family: "Font Awesome 6 Free";
+  font-size: calc(var(--fs-normal) + 1rem);
+  font-weight: 200;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+}
+.question:hover {
+  background-color: var(--clr-neutral-alt);
 }
 
 /*# sourceMappingURL=main.css.map */
