--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -1,3 +1,6 @@
+.d-block {
+  display: block;
+}
 .d-flex {
   display: flex;
 }
@@ -30,6 +33,9 @@
 }
 .justify-center {
   justify-content: center;
+}
+.justify-between {
+  justify-content: space-between;
 }
 .between-flex {
   display: flex;
@@ -74,6 +80,9 @@
 }
 .clr-neutral-alt {
   background-color: var(--clr-neutral-alt);
+}
+.clr-blue {
+  color: var(--clr-blue);
 }
 .ff-roboto {
   font-family: var(--ff-roboto);
