--- a/public/scss/_utilitites.scss
+++ b/public/scss/_utilitites.scss
@@ -18,8 +18,42 @@
     margin-right: #{$i * 10px};
   }
 }
+@for $i from 1 through 10 {
+  .m-#{$i} {
+    margin: #{$i}px;
+  }
+  .mt-#{$i} {
+    margin-top: #{$i}px;
+  }
+  .mb-#{$i} {
+    margin-bottom: #{$i}px;
+  }
+  .ml-#{$i} {
+    margin-left: #{$i}px;
+  }
+  .mr-#{$i} {
+    margin-right: #{$i}px;
+  }
+}
 
 // Padding
+@for $i from 1 through 10 {
+  .p-#{$i} {
+    padding: #{$i}px;
+  }
+  .pt-#{$i} {
+    padding-top: #{$i}px;
+  }
+  .pb-#{$i} {
+    padding-bottom: #{$i}px;
+  }
+  .pl-#{$i} {
+    padding-left: #{$i}px;
+  }
+  .pr-#{$i} {
+    padding-right: #{$i}px;
+  }
+}
 @for $i from 1 through 10 {
   .p-#{$i * 10} {
     padding: #{$i * 10px};
