--- a/public/scss/_components.scss
+++ b/public/scss/_components.scss
@@ -34,6 +34,10 @@
     left: 10px;
     color: white;
     z-index: 1;
+
+    &-2 {
+      top: 3px !important;
+    }
   }
 
   .arrow-down {
@@ -42,6 +46,11 @@
     right: 16px;
     color: white;
     z-index: 1;
+
+    &-2 {
+      right: 10px;
+      top: 5px;
+    }
   }
 
   &-lang {
