--- a/public/scss/_reset.scss
+++ b/public/scss/_reset.scss
@@ -23,6 +23,7 @@ dd {
 ul,
 ol {
   list-style: none;
+  padding: 0;
 }
 
 /* Set core root defaults */
@@ -50,7 +51,8 @@ select {
   font: inherit;
 }
 
-label, select {
+label,
+select {
   font-size: 1rem;
 }
 
