--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -3,6 +3,7 @@
 @use "./layout" as *;
 @use "./utilitites" as *;
 @use "./components" as *;
+@use './responsive' as *;
 
 body {
   background-color: #000;
@@ -30,7 +31,7 @@ header {
   background: {
     image: url("../images/main_background.jpg");
     position: right bottom;
-    size: 125%;
+    size: cover;
     repeat: no-repeat;
   }
   position: relative;
@@ -55,9 +56,15 @@ header {
     font-weight: 400;
   }
   .image video {
-    top: 95px;
-    left: 85px;
     z-index: -1;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    max-width: 73%;
+    max-height: 54%;
+    top: 48%;
+    left: 49.5%;
+    transform: translate(-50%, -50%);
   }
 }
 
